--- a/src/Hero.css
+++ b/src/Hero.css
@@ -1,4 +1,3 @@
-/* NavigationBar.css */
 *{
   font-family: -apple-system, BlinkMacSystemFont;  
 
@@ -458,4 +457,7 @@ margin-bottom: 100px;
 
 footer{
   margin:30px;
+}
+p{
+  color: black;
 }
